--- a/connexus_test/app.yaml
+++ b/connexus_test/app.yaml
@@ -8,6 +8,10 @@ handlers:
 - url: /stylesheets
   static_dir: stylesheets
 
+- url: /trendingShort
+  script: connexus.application
+  login: admin
+
 - url: /.*
   script: connexus.application
 
