finished cron jobs, updated create page

--- a/connexus_test/app.yaml
+++ b/connexus_test/app.yaml
@@ -12,6 +12,14 @@ handlers:
   script: connexus.application
   login: admin
 
+- url: /trendingHourly
+  script: connexus.application
+  login: admin
+
+- url: /trendingDaily
+  script: connexus.application
+  login: admin
+
 - url: /.*
   script: connexus.application
 
