--- a/connexus_test/cron.yaml
+++ b/connexus_test/cron.yaml
@@ -8,4 +8,20 @@ cron:
 - description: daily trending summary
   url: /trendingDaily
   schedule: every 24 hours
+- description: hourly search autocomplete collection
+  url: /refreshAutoComplete
+  schedule: every 1 hours
 
+  {% for stream_name in stream_names %}
+       			{{ stream_name|safe }}
+			{% endfor %}
+
+
+	$(function() {
+var complete_names = [ 
+"test999"
+];
+$("#cxus_search").autocomplete({
+source: complete_names
+});
+});
